fix shadow separator z-index

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -162,7 +162,7 @@ a {
   background-color: #080808;
   position: relative;
   box-shadow: 0px 5px 12px 3px #080808, 0px -5px 12px 3px #080808;
-  z-index: 10;
+  z-index: 2;
 }
 
 .hr-separator-full {
@@ -182,7 +182,7 @@ a {
 /* NAVIGATION
 --------------------------------------------------------------------------- */
 .nav-container {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   background: linear-gradient(180deg, #070707 0%, rgba(7, 7, 7, 0.922609) 18.44%, rgba(7, 7, 7, 0.853317) 30.9%, rgba(7, 7, 7, 0.773455) 40.96%, rgba(7, 7, 7, 0.694792) 48.15%, rgba(7, 7, 7, 0.503508) 62.29%, rgba(7, 7, 7, 0.349836) 70.91%, rgba(7, 7, 7, 0.179333) 82.52%, rgba(7, 7, 7, 0.104165) 87.69%, rgba(7, 7, 7, 0) 95.88%);
   top: 0;
